--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-ui-stepper",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A react-native implementation of the iOS UIStepper",
   "main": "UIStepper.js",
   "scripts": {
@@ -25,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/hannigand/react-native-ui-stepper/issues"
   },
-  "homepage": "https://github.com/hannigand/react-native-ui-stepper#readme"
+  "homepage": "https://github.com/hannigand/react-native-ui-stepper#readme",
+  "dependencies": {
+    "prop-types": "^15.5.10"
+  }
 }
