--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.4",
 		"react-native-markdown": "^0.1.1",
-		"react-native-ui-stepper": "^1.1.0",
+		"react-native-ui-stepper": "1.2.0",
 		"react-navigation": "^1.0.0-beta.13"
 	},
 	"devDependencies": {
